# cicd-playground

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
playground/: __init__.py  play.py
tests/: conftest.py  test_play.py
